Finished the header spacing bug.

--- a/source/stylesheets/components/_header.scss
+++ b/source/stylesheets/components/_header.scss
@@ -1,4 +1,12 @@
 h1 {
   color: white;
   font-size: 80px;
+  margin: 0;
+  padding: 0;
+}
+
+.header-container {
+  width: 100%;
+  text-align: center;
+  padding-top: 80px;
 }
