--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -13,3 +13,7 @@
   z-index: 1;
   background-color: transparent;
 }
+
+body {
+  margin: 0 auto;
+}
